// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`maxWidth if falsy 1`] = `
<div
  className="ALERT_MODAL_BODY layout row layout-align-center"
  style={
    Object {
      "maxWidth": "600px",
      "width": "80vw",
    }
  }
>
  <i
    className="exit_icon fa fa-times"
    onClick={[Function]}
  />
  <div>
    <div>
      <img
        src="LOGO_URL_ADDRESS"
        style={
          Object {
            "height": "50px",
          }
        }
      />
    </div>
    foo
    <div
      className="flex-100 layout-row layout-align-end"
    >
      <div>
        <span
          style={
            Object {
              "fontSize": "10px",
              "marginRight": "2px",
            }
          }
        >
          Powered by
        </span>
        <img
          src="https://assets.itsmycargo.com/assets/logos/logo_box.png"
          style={
            Object {
              "height": "20px",
              "margin": "0 3px -5px 3px",
            }
          }
        />
        <span
          style={
            Object {
              "color": "rgb(100, 100, 100)",
              "fontSize": "14px",
              "fontWeight": "bold",
            }
          }
        >
          ItsMyCargo
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="ALERT_MODAL_BODY layout row layout-align-center"
  style={
    Object {
      "maxWidth": "1000",
      "width": "80vw",
    }
  }
>
  <i
    className="exit_icon fa fa-times"
    onClick={[Function]}
  />
  <div>
    <div>
      <img
        src="LOGO_URL_ADDRESS"
        style={
          Object {
            "height": "50px",
          }
        }
      />
    </div>
    foo
    <div
      className="flex-100 layout-row layout-align-end"
    >
      <div>
        <span
          style={
            Object {
              "fontSize": "10px",
              "marginRight": "2px",
            }
          }
        >
          Powered by
        </span>
        <img
          src="https://assets.itsmycargo.com/assets/logos/logo_box.png"
          style={
            Object {
              "height": "20px",
              "margin": "0 3px -5px 3px",
            }
          }
        />
        <span
          style={
            Object {
              "color": "rgb(100, 100, 100)",
              "fontSize": "14px",
              "fontWeight": "bold",
            }
          }
        >
          ItsMyCargo
        </span>
      </div>
    </div>
  </div>
</div>
`;
